# windbg-mcp-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.xml  session-ses_319a.md  session.md  windbg_mcp_rs_GalleryManifest.xml
.github/workflows/: release-on-tag.yml
llm_cache/chm_full/debugger/: 32_bit_pointers_and_64_bit_pointers.htm  _______________________a___run_script_file_.htm  _______alias_interpreter_.htm  ______block_delimiter_.htm  _____comment_specifier_.htm  ____command_separator_.htm  ____comment_line_specifier_.htm  ____evaluate_c___expression_.htm  ____system_status_.htm  ___command_help_.htm  ___evaluate_expression_.htm  ___process_status_.htm  ___search_for_disassembly_pattern_.htm  ___thread_status_.htm  __s__set_current_system_.htm  _abandon__abandon_process_.htm  _acl.htm  _acpicache.htm  _acpiinf.htm  _acpiirqarb.htm  _acpikd_help.htm  _address.htm  _ahcache.htm  _alignmentfaults.htm  _allow_exec_cmds__allow_execution_commands_.htm  _allow_image_mapping__allow_image_mapping_.htm  _amli__.htm  _amli_bc.htm  _amli_bd.htm  _amli_be.htm  _amli_bl.htm  _amli_bp.htm  _amli_cl.htm  _amli_debugger.htm  _amli_dh.htm  _amli_dl.htm  _amli_dns.htm  _amli_do.htm  _amli_ds.htm  _amli_find.htm  (+2901 more)
llm_cache/chm_index/: debugger.hhc  debugger.hhk
scripts/: install.ps1
src/: catalog.json  catalog.rs  command_catalog.json  executor.rs  extension.rs  lib.rs  plugin_server.rs  primary_client.rs  resources.rs  server.rs
tests/: server_smoke.rs
