[package]
name = "windbg-mcp-rs"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
axum = "0.8"
rmcp = { version = "1.2.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_SystemServices",
] }
windows-core = "0.62"
